# LSCL

./: .gitignore  CMakeLists.txt  CODE_DESIGN.TXT  LICENSE  README.md  grammarkek.txt  lscl.hpp  lscl.pc.in  winbuild.txt
doc/: Doxyfile.in
lscl/: lscl.hpp
src/: defines.hpp  exception.cpp  exception.hpp  global.cpp  global.hpp  lscl.cpp  node.hpp  node_internal.cpp  node_internal.hpp  nodebuilder.cpp  nodebuilder.hpp  scalar.cpp  scalar.hpp  stream.cpp  stream.hpp  test.cpp  test.hpp
src/cpp/: defines.hpp  exception.hpp  global.cpp  global.hpp  node.cpp  node.hpp  node_internal.cpp  node_internal.hpp  nodebuilder.cpp  nodebuilder.hpp  script.cpp  script.hpp  stream.cpp  stream.hpp  test.cpp  test.hpp
src/flexbison/: lscl_lexer.l  lscl_parser.yy  lscl_scanner.hpp  regextest.txt
src/newnodes/: newnodes.cpp
standard/: .gitignore  LSCL_standard.tex  listing.tex  options.tex  titlepage.tex
test/: .gitignore  CMakeLists.txt  main_example.lscl  t.txt  test.sh  test1.cpp  test_multithread.cpp  test_multithread.sh
